# Predictive_Analysis_Project4

./: README.md
Heart_Disease_Analysis/: Heart_disease.toml  Heart_disease_datasummary.py  exploratoryDataAnalysis.py  heartdisease.csv  inferences.py  mainscript.py  pyproject.toml
Heart_Disease_Analysis/Src/: Predictive_modelling_analysis.ipynb
