[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = " Heart Disease Analysis"
authors = [{name = "Sandeep Varma Uppalapati", email = "suppalap@mail.yu.edu"}]
version = "0.1.0"
description = "Solved Researched Questions by using predictive model using sckit-learn"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.4",
    "numpy>=1.21",
    "pandas>=1.3",
    "seaborn>=0.11",
    "scikit-learn">=0.24"
]


[project.urls]
homepage = "https://github.com/monster2920"
repository = "https://github.com/monster2920/Predictive_Analysis_Project4"


[tool.setuptools.packages.find]
where = ["src"]
